--- a/public/js/jet-composites/empls-chart/empls-chart-view.html
+++ b/public/js/jet-composites/empls-chart/empls-chart-view.html
@@ -9,5 +9,5 @@
     animation-on-display="auto"
     animation-on-data-change="auto"
     hover-behavior="dim"
-    style="max-width:500px;width:100%;height:350px;">
+    style="max-width:500px;height:350px;">
 </oj-chart>
