--- a/public/js/jet-composites/empls-chart/empls-chart-view.html
+++ b/public/js/jet-composites/empls-chart/empls-chart-view.html
@@ -9,5 +9,6 @@
     animation-on-display="auto"
     animation-on-data-change="auto"
     hover-behavior="dim"
-    style="max-width:500px;height:350px;">
+    legend.position="bottom"
+    style="width:500px;height:450px;">
 </oj-chart>
